lxml changelog
==============

under development
=================

Features added
--------------

* parameters (XPath expressions) can now be passed to XSLT using
  keyword parameters.

* Simple XInclude support. Calling the xinclude() method on a tree
  will process any XInclude statements in the document.

* Added convenience xslt() method on tree. This is less efficient
  than the XSLT object, but makes it easier to write quick code.

* Added convenience relaxng() method on tree. This is less efficient
  than the RelaxNG object, but makes it easier to write quick code.

* Make it possible to use XPathEvaluator with elements as well. The
  XPathEvaluator in this case will retain the element so multiple
  XPath queries can be made against one element efficiently. This
  replaces the second argument to the .evaluate() method that existed
  previously.

* Allow registerNamespace() to be called on an XPathEvaluator, after
  creation, to add additional namespaces. Also allow registerNamespaces(),
  which does the same for a namespace dictionary.

* Cleaned out the ElementTree.write() method (and tostring() for root 
  elements) so it should handle encoding correctly. Writing directly to
  a file should also be faster now, as there is no need to go through a
  Python string in that case. Made sure the test cases test both
  serializing to StringIO as well as serializing to a real file.

* Add 'prefix' attribute to element to be able to read prefix information.
  This is entirely read-only.

* It is possible to supply an extra ns_resolver keyword parameter to
  the Element() and ElementTree() constructors, which supplies a
  prefix to namespace URI mapping. See etree.NsResolver for a basic
  (but usable) implementation, which expects a dictionary with a
  prefix->uri mapping. The namespace prefixes will then be used where
  possible and show up in XML serialization.
  
Bugs fixed
----------
 
* Killed yet another memory management related bug: trees created