@@ -3,7 +3,6 @@ import unittest, doctest
 
 from StringIO import StringIO
 import os, shutil, tempfile
-#from lxml import c14n
 
 class ETreeTestCaseBase(unittest.TestCase):
     etree = None
@@ -1757,6 +1756,61 @@ class ETreeRelaxNGTestCase(HelperTestCase):
         self.assert_(tree_valid.relaxng(schema))
         self.assert_(not tree_invalid.relaxng(schema))
 
+class ETreeXMLSchemaTestCase(HelperTestCase):
+    def test_xmlschema(self):
+        tree_valid = self.parse('<a><b></b></a>')
+        tree_invalid = self.parse('<a><c></c></a>')
+        schema = self.parse('''
+<xsd:schema xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+  <xsd:element name="a" type="AType"/>
+  <xsd:complexType name="AType">
+    <xsd:sequence>
+      <xsd:element name="b" type="xsd:string" />
+    </xsd:sequence>
+  </xsd:complexType>
+</xsd:schema>
+''')
+        schema = etree.XMLSchema(schema)
+        self.assert_(schema.validate(tree_valid))
+        self.assert_(not schema.validate(tree_invalid))
+
+    def test_xmlschema_invalid_schema(self):
+        schema = self.parse('''\
+<xsd:schema xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+  <element name="a" type="AType"/>
+  <xsd:complexType name="AType">
+    <xsd:sequence>
+      <xsd:element name="b" type="xsd:string" />
+    </xsd:sequence>
+  </xsd:complexType>
+</xsd:schema>
+''')
+        self.assertRaises(etree.XMLSchemaParseError,
+                          etree.XMLSchema, schema)
+
+##     def test_xmlschema_include(self):
+##         # this will only work if we access the file through path or
+##         # file object..
+##         f = open(fileInTestDir('test1.rng'), 'r')
+##         schema = etree.RelaxNG(file=f)
+
+    def test_xmlschema_shortcut(self):
+        tree_valid = self.parse('<a><b></b></a>')
+        tree_invalid = self.parse('<a><c></c></a>')
+        schema = self.parse('''\
+<xsd:schema xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+  <xsd:element name="a" type="AType"/>
+  <xsd:complexType name="AType">
+    <xsd:sequence>
+      <xsd:element name="b" type="xsd:string" />
+    </xsd:sequence>
+  </xsd:complexType>
+</xsd:schema>
+''')
+        self.assert_(tree_valid.xmlschema(schema))
+        self.assert_(not tree_invalid.xmlschema(schema))
+
+    
 class ETreeXIncludeTestCase(HelperTestCase):
     def test_xinclude(self):
         tree = etree.parse(fileInTestDir('test_xinclude.xml'))
@@ -1784,6 +1838,7 @@ def test_suite():
     suite.addTests([unittest.makeSuite(ETreeOnlyTestCase)])
     suite.addTests([unittest.makeSuite(ETreeXSLTTestCase)])
     suite.addTests([unittest.makeSuite(ETreeRelaxNGTestCase)])
+    suite.addTests([unittest.makeSuite(ETreeXMLSchemaTestCase)])
     suite.addTests([unittest.makeSuite(ETreeXIncludeTestCase)])
     suite.addTests([unittest.makeSuite(ETreeC14NTestCase)])
     suite.addTests(
